# QInjection

./: .gitignore  CMakeLists.txt  README.md  dependencyinjection.cpp  dependencyinjection.h  dependencypointer.cpp  dependencypointer.h  depjet.pri  poolprivate.cpp  poolprivate.h
src/: CMakeLists.txt  dep_global.h  dependencycreator.h  dependencyinjector.cpp  dependencyinjector.h  dependencypointer.h  dependencypool.cpp  dependencypool.h  dependencypool_p.h  src.pri  src.pro
tests/: CMakeLists.txt  tests.pro
tests/.qmake2cmake/: subdir-of
tests/NewAPI/: CMakeLists.txt  NewAPI.pro  tst_newapi.cpp
tests/auto_create/: CMakeLists.txt  auto_create.pro  constholder.cpp  constholder.h  tst_create.cpp
tests/auto_create/.qmake2cmake/: subdir-of
tests/common/: adder.cpp  constholder.h
tests/main/: CMakeLists.txt  adder.h  lifetimereporter.cpp  lifetimereporter.h  main.pro  tst_main.cpp  tst_main.h
